# verification-games

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: 00_experiment_template.ipynb  baseline_timeseries_pipeline.org  data_plan.org  forward_model_output_checks.org  forward_model_output_checks_meeting.org  forward_model_pipeline.md  forward_model_pipeline.org  forward_model_production_run.org
notebooks/logs/: production_run.txt
scripts/: install_kernel.py  populate_data.py
src/verification_games/: __init__.py  cluster.py  flux_stage.py  metadata.py  notebook.py  paths.py  run_forward_model.py  units.py
tests/: test_flux_stage.py  test_run_forward_model.py
